
0.9.10a Jul 17, 2005
 * check before downloading package if existing file is larger than
   expected size, if so redownload.

0.9.10 Jul 14, 2005
 * limit mmap'd size for very large packages
 * updated Vi translation
 * updated find_or_requirement() to prefer installed packages
 * translation updates
 * moved header files into src/, updated Makefile
 * updated configuration parser to detect sources with spaces at the end
   and updated handling of sources without trailing slashes
 * check in update_pkg_cache() to make sure patch_pkgs is initialized

0.9.9m Jun 30, 2005
 * --dist-upgrade update so that only packages with different arches and the
   the same versions are reinstalled
 * improved speed of parsing installed directories
 * added Slovak translation by Erik Gyepes
 * added DESTDIR support to the makefile (thanks freerock)
 * removed lilo from default exclude list, added glibc.*
 * be quiet if a file doesn't exist when we test with verify_downloaded_pkg();
 * ignore case when comparing versions
 * updated vi translation from Vu
 * exit returning error code when disk space check fails
 * fixed bug where missing dep notification was incorrectly printed with
   multiple dependencies
 * fixed bug where packages w/o descriptions wouldn't show up in --available
   or --list
 * small updates

0.9.9l May 29, 2005
 * removed private search_exclude_transaction() in favor of
   get_exact_pkg(tran->exclude_pkgs,pkg) (libslapt)
 * made search_upgrade_transaction() public (libslapt)
 * fixed bug in remove_from_transaction() function (libslapt)
 * updated translations
 * updated example.slapt-getrc

0.9.9k May 18, 2005
 * added pkg_err_t typedef and api for error handling (libslapt)
   updated transaction code to show conflict and missing dependency
   notifications during the transaction handler.
 * fixed regression in slack-required file
 * code formatting updates
 * fixed a few warnings for gcc 4.0 support