@@ -1,5 +1,7 @@
 
 0.9.10a Jul 17, 2005
+ * handled CURLE_FTP_BAD_DOWNLOAD_RESUME and CURLE_PARTIAL_FILE errors
+   the same way we handle CURLE_HTTP_RANGE_ERROR, unlink and retry
  * check before downloading package if existing file is larger than
    expected size, if so redownload.
 
